// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms / DatePickerInput Demo 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="date-picker-input "
    >
      <div
        className="date-picker-input__field"
        onClick={[Function]}
        tabIndex={0}
      >
        mardi 13 février 1990
      </div>
      <div
        className="date-picker-input__picker-panel"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms / DatePickerInput Disabled Story 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="date-picker-input "
    >
      <div
        className="date-picker-input__field date-picker-input__field--disabled"
        onClick={[Function]}
        tabIndex={-1}
      >
        mardi 13 février 1990
      </div>
      <div
        className="date-picker-input__picker-panel"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms / DatePickerInput Error Story 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="date-picker-input "
    >
      <div
        aria-invalid={true}
        className="date-picker-input__field date-picker-input__field--error"
        onClick={[Function]}
        tabIndex={0}
      >
        mardi 13 février 1990
      </div>
      <div
        className="date-picker-input__picker-panel"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms / DatePickerInput Main 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="date-picker-input "
    >
      <div
        className="date-picker-input__field"
        onClick={[Function]}
        tabIndex={0}
      >
        mardi 13 février 1990
      </div>
      <div
        className="date-picker-input__picker-panel"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms / DatePickerInput Read Only Story 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="date-picker-input "
    >
      <div
        className="date-picker-input__field date-picker-input__field--read-only"
        onClick={[Function]}
        tabIndex={0}
      >
        mardi 13 février 1990
      </div>
      <div
        className="date-picker-input__picker-panel"
      />
    </div>
  </div>
</div>
`;
